# AutumnRAG

./: README.md  main.py  pyproject.toml
data/: kht_contract.docx
notebooks/: simple_rag.ipynb
