[project]
name = "autumnrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.33",
    "sentence-transformers>=5.1.1",
]
